[package]
name = "open-desktop-thermal-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
dirs = "5.0.1"
eframe = { version = "0.24.1", features = ["wgpu"] }
egui_dock = "0.9.1"
egui_extras = { version = "0.24.2", features = ["svg"] }
egui_plot = "0.24.1"
env_logger = "0.10.1"
log = "0.4.20"
nokhwa = { git = "https://github.com/alufers/nokhwa.git", branch = "fix/0.10.3-fix-macos-usb-camera", features = [
    "input-v4l",
    "input-native",
    "output-threaded",
] }
once_cell = "1.19.0"
regex = "1.10.2"
rusb = "0.9.3"
serde = "1.0.194"
serde_json = "1.0.111"
strum = "0.25.0"
strum_macros = "0.25.3"

[dependencies.winit]
features = ["wayland"]

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
