[package]
name = "thermal-cat"
description = "A thermal camera viewer."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
dirs = "5.0.1"
eframe = { version = "0.26.2", features = ["wgpu"] }
egui_dock = "0.11.4"
egui_extras = { version = "0.26.2", features = ["svg"] }
egui_plot = "0.26.2"
env_logger = "0.11.3"
log = "0.4.21"
nokhwa = { git = "https://github.com/alufers/nokhwa.git", branch = "fix/0.10.3-fix-macos-usb-camera", features = [
    "input-v4l",
    "input-native",
    "output-threaded",
] }
once_cell = "1.19.0"
regex = "1.10.3"
rusb = "0.9.3"
serde = "1.0.197"
serde_json = "1.0.114"
strum = "0.26.2"
strum_macros = "0.26.2"


[dependencies.winit]
features = ["wayland"]

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[package.metadata.bundle]
name = "Open Desktop Thermal Viewer"
identifier = "dog.alu.opendesktopthermalviewer"
icon = ["thermal-cat-logo-512px.png"]
category = "Developer Tool"
short_description = "A thermal camera viewer."
description = "A thermal camera viewer."
deb_depends = ["libgl1-mesa-glx", "libsdl2-2.0-0 (>= 2.0.5)"]


[package.metadata.appimage]
auto_link = true
auto_link_exclude_list = [
    "libc.so*",
    "libdl.so*",
    "libpthread.so*",
]
